Fix invisible text

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -115,3 +115,7 @@ h2 {
 	width: 35%;
 	height: 35%;
 }
+
+.invisible-text {
+	display: none;
+}
